# HUCE-ChatBot

./: .dockerignore  .gitignore  API_GUIDE.md  ARCHITECTURE.md  CHECKLIST_HOSTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  HUONG_DAN_HOSTING.md  QUICK_START_HOSTING.md  README.md  READY_TO_DEPLOY.md  config.py  constants.py  docker-compose.yml  env.example  fly.backend.toml  fly.frontend.toml  fly.toml  main.py  models.py  nginx.conf  pyproject.toml  pytest.ini  render.yaml  requirements.txt  test_api_comprehensive.py
backend/: .gitignore  config.py  main.py
backend/data/: admission_conditions.csv  contact_info.csv  scholarships.csv  synonym.csv  tuition.csv
backend/nlu/: pipeline.py
backend/services/: __init__.py  nlp_service.py
backend/services/handlers/: __init__.py
backend/services/processors/: admissions.py  cache.py  contact.py  majors.py  scores.py  utils.py
data/: admission_methods.csv  admission_scores.csv  admission_targets.csv  admissions_schedule.csv  admissions_sector.csv  cefr_conversion.csv  entity.json  intent.csv  majors.csv  responses.json  subject_combinations.csv
data_cleaned/: admissions_sector.csv  entity.json  floor_score.csv  standard_score.csv  tuition.csv
exceptions/: __init__.py  api_exceptions.py  data_exceptions.py  nlp_exceptions.py
frontend/: .gitignore  README.md  backend_log.txt  pyproject.toml  requirements.txt  run.bat  rxconfig.py
frontend/chatbot/: __init__.py  chatbot.py  state.py
frontend/chatbot/api/: __init__.py  backend_client.py
frontend/chatbot/components/: __init__.py  chat_interface.py  input_box.py  message_bubble.py  suggested_questions.py
frontend/chatbot/styles/: __init__.py  theme.py
nlu/: entities.py  intent.py  pipeline.py  preprocess.py
scripts/: README.md  deploy.sh
services/: __init__.py  csv_service.py  nlp_service.py
services/handlers/: fallback.py  intent_handler.py
services/processors/: __init__.py  academic.py  admissions.py  cache.py  cefr.py  scores.py  utils.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_context.py  test_entities.py  test_exceptions.py  test_intent.py  test_preprocess.py  test_processors.py  test_sanitize.py
tools/: generate_intents.py  test_score_queries.py
utils/: sanitize.py
