[project]
name = "backend"
version = "0.1.0"
description = "Chatbot Tư vấn Tuyển sinh HUCE - Backend API"
requires-python = ">=3.13"
dependencies = [
    # FastAPI - Framework chính
    "fastapi==0.121.1",
    # Uvicorn server - ASGI server
    "uvicorn[standard]==0.38.0",
    # NLP - Underthesea cho tokenization tiếng Việt
    "underthesea==8.3.0",
    # Utilities - Regex cho text processing
    "regex==2025.11.3",
]
