[project]
name = "chatbot-huce"
version = "0.1.0"
description = "Chatbot Tư vấn Tuyển sinh HUCE - Full Stack (Backend + Frontend)"
requires-python = ">=3.13"
dependencies = [
    # Backend - FastAPI Framework
    "fastapi==0.122.0",
    # Backend - Uvicorn server - ASGI server
    "uvicorn[standard]==0.38.0",
    # Backend - NLP - Underthesea cho tokenization tiếng Việt
    "underthesea==8.3.0",
    # Silences SyntaxWarnings from underthesea when running server/tests
    "python-dotenv>=1.0.0",
    # Backend - Utilities - Regex cho text processing
    "regex==2025.11.3",
    # Frontend - Reflex Framework
    "reflex==0.8.21",
    # Frontend - HTTP client để gọi FastAPI backend
    "httpx>=0.25.0",
    # Frontend - WebSocket và Performance packages
    "websockets>=15.0.0",
    "httptools>=0.7.0",
    "watchfiles>=1.0.0",
    # Build system
    "hatchling==1.28.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.8",
    "mypy>=1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
pretty = true
