[project]
name = "chatbot"  # Match với folder chatbot/
version = "1.0.0"
description = "Chatbot Tư vấn Tuyển sinh HUCE - Frontend với Reflex"
requires-python = ">=3.10"
dependencies = [
    "reflex>=0.4.0",
    "httpx>=0.25.0",
    "websockets>=15.0.0",
    "httptools>=0.7.0",
    "watchfiles>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Chỉ định rõ packages để build (tránh lỗi auto-detect)
[tool.hatch.build.targets.wheel]
packages = ["chatbot"]

